--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.0.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.5",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
     "web-vitals": "^1.1.2"
