--- a/client/package.json
+++ b/client/package.json
@@ -1,55 +1,56 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "proxy": "http://localhost:5000",
-  "homepage": ".",
-  "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@mui/icons-material": "^5.1.0",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.24.0",
-    "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-file-base64": "^1.0.3",
-    "react-icons": "^4.3.1",
-    "react-redux": "^7.2.6",
-    "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-router-hash-link": "^2.4.3",
-    "react-scripts": "4.0.3",
-    "react-scroll": "^1.8.5",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.0",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "jest",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "react-error-overlay": "^6.0.9"
-  }
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"proxy": "http://localhost:5000",
+	"homepage": ".",
+	"dependencies": {
+		"@material-ui/core": "^4.12.3",
+		"@mui/icons-material": "^5.1.0",
+		"@testing-library/react": "^11.2.7",
+		"@testing-library/user-event": "^12.8.3",
+		"axios": "^0.24.0",
+		"moment": "^2.29.1",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-file-base64": "^1.0.3",
+		"react-icons": "^4.3.1",
+		"react-redux": "^7.2.6",
+		"react-router": "^6.0.2",
+		"react-router-dom": "^6.0.2",
+		"react-router-hash-link": "^2.4.3",
+		"react-scripts": "4.0.3",
+		"react-scroll": "^1.8.5",
+		"redux": "^4.1.2",
+		"redux-thunk": "^2.4.0",
+		"styled-components": "^5.3.10",
+		"web-vitals": "^1.1.2"
+	},
+	"scripts": {
+		"start": "react-scripts --openssl-legacy-provider start",
+		"build": "react-scripts build",
+		"test": "jest",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"react-error-overlay": "^6.0.9"
+	}
 }
