--- a/client/package.json
+++ b/client/package.json
@@ -22,10 +22,7 @@
 		"react-router-hash-link": "^2.4.3",
 		"react-scripts": "4.0.3",
 		"react-scroll": "^1.8.5",
-		"redux": "^4.1.2",
-		"redux-thunk": "^2.4.0",
-		"styled-components": "^5.3.10",
-		"web-vitals": "^1.1.2"
+		"styled-components": "^5.3.10"
 	},
 	"scripts": {
 		"start": "react-scripts --openssl-legacy-provider start",
