--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
 		"react-router": "^6.0.2",
 		"react-router-dom": "^6.0.2",
 		"react-router-hash-link": "^2.4.3",
-		"react-scripts": "4.0.3",
+		"react-scripts": "^4.0.3",
 		"react-scroll": "^1.8.5",
 		"styled-components": "^5.3.10"
 	},
