--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
 		"styled-components": "^5.3.10"
 	},
 	"scripts": {
-		"start": "react-scripts --openssl-legacy-provider start",
+		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "jest",
 		"eject": "react-scripts eject"
