--- a/client/package.json
+++ b/client/package.json
@@ -5,25 +5,19 @@
 	"proxy": "http://localhost:5000",
 	"homepage": ".",
 	"dependencies": {
-		"@material-ui/core": "^4.12.3",
-		"@mui/icons-material": "^5.1.0",
-		"@testing-library/react": "^11.2.7",
-		"@testing-library/user-event": "^12.8.3",
-		"axios": "^0.24.0",
+		"@emotion/is-prop-valid": "^1.3.1",
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@mui/material": "^6.4.4",
 		"gsap": "^3.12.7",
-		"moment": "^2.29.1",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-file-base64": "^1.0.3",
-		"react-icons": "^4.3.1",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-icons": "^5.4.0",
 		"react-parallax": "^3.5.1",
-		"react-redux": "^7.2.6",
-		"react-router": "^6.0.2",
-		"react-router-dom": "^6.0.2",
+		"react-router-dom": "^7.1.5",
 		"react-router-hash-link": "^2.4.3",
-		"react-scripts": "^4.0.3",
-		"react-scroll": "^1.8.5",
-		"styled-components": "^5.3.10"
+		"react-scripts": "^5.0.1",
+		"styled-components": "^6.1.15"
 	},
 	"scripts": {
 		"start": "react-scripts start",
