--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,10 @@
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.0",
 		"@mui/material": "^6.4.4",
+		"@types/jest": "^29.5.14",
+		"@types/node": "^22.13.4",
+		"@types/react": "^19.0.8",
+		"@types/react-dom": "^19.0.3",
 		"gsap": "^3.12.7",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
@@ -17,7 +21,8 @@
 		"react-router-dom": "^7.1.5",
 		"react-router-hash-link": "^2.4.3",
 		"react-scripts": "^5.0.1",
-		"styled-components": "^6.1.15"
+		"styled-components": "^6.1.15",
+		"typescript": "^5.7.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
